--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ h1{
 }
 
 p{
-    font-size: 25pt;
+    font-size: 25px;
     font-style: italic;
 }
+
+@media (max-width: 790px) {
+    .h1 {
+      color: blue;
+    }
